--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "base-64": "^1.0.0",
+    "decode-base64": "^3.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "simple-react-validator": "^1.6.2",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
